# trustbridge-contract

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: ABI.md  ADMIN_RUNBOOK.md  ARCHITECTURE.md  CONTRIBUTING.md  DASHBOARD_SYNC.md  DEPLOYMENT.md  EVENT_INDEXING.md  REGISTRY_INVARIANTS.md  SECURITY.md  TESTNET_CHECKLIST.md
scripts/: deploy.sh
src/: audit.rs  batch.rs  error.rs  error_context.rs  events.rs  lib.rs  storage.rs  utils.rs  version.rs
tests/: integration.rs
