[package]
name = "trustbridge-contract"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"
description = "On-chain GitHub username → Stellar address registry for TrustBridge"
license = "MIT"
repository = "https://github.com/Stellar-TrustBridge/trustbridge-contract"
keywords = ["soroban", "stellar", "smart-contract", "trustbridge"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "26.0.1"

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
